syntax = "proto3";
option go_package = "./;pb";
package pb;

service SubService {
  rpc Sub (SubRequest) returns (SubResponse) {}
  rpc SubAfterAdd(SubRequest) returns (SubResponse) {}
}

message SubRequest {
  int64 a = 1;
}

message SubResponse {
  int64 v = 1;
}
